Altas de ecuaciones relativamente mas legibles. Ni de pedo lo hare en la tabla a no ser que tenga mas tiempo Reparado añadir usuarios

--- a/web/administrator/home.xhtml
+++ b/web/administrator/home.xhtml
@@ -29,7 +29,7 @@
             </h:commandLink>
             <h:form id="adminForm" rendered="#{adminManager.showUser}">
                 <h:commandLink action="#{adminManager.setIsAdding(true)}" value="A&ntilde;adir usuario" >
-                    <f:ajax execute="addUserPanel" render="addUserPanel"/>
+                    <f:ajax execute="@form" render="@form"/>
                 </h:commandLink>
                 <h:panelGrid id="addUserPanel" columns="5" rendered="#{adminManager.isAdding}">
                     <f:facet name="header">New User</f:facet>
